@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.2.1" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.2.2" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -15,6 +15,7 @@
 [B]2.2.X[/B]
 - Reincluded url_dispatcher module for addons that may use it in the future
 - New reload skin function
+- Log exception on client function upon failure
 
 [B]2.1.X[/B]
 - Utilize kodi-six to further improve Python 2/3 compatibility
